Update Rasa configuration and localization for Italian language support

--- a/data/rules.yml
+++ b/data/rules.yml
@@ -2,12 +2,12 @@ version: "3.1"
 
 rules:
 
-- rule: Say goodbye anytime the user says goodbye
+- rule: Saluta quando l'utente dice arrivederci
   steps:
   - intent: goodbye
   - action: utter_goodbye
 
-- rule: Say 'I am a bot' anytime the user challenges
+- rule: Dì 'Sono un bot' quando l'utente chiede
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
