--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -3,89 +3,79 @@ version: "3.1"
 nlu:
 - intent: greet
   examples: |
-    - hey
-    - hello
-    - hi
-    - hello there
-    - good morning
-    - good evening
-    - moin
-    - hey there
-    - let's go
-    - hey dude
-    - goodmorning
-    - goodevening
-    - good afternoon
+    - ciao
+    - salve
+    - buongiorno
+    - buonasera
+    - ehi
+    - ciao a tutti
+    - ciao ciao
+    - buona giornata
+    - buon pomeriggio
 
 - intent: goodbye
   examples: |
-    - cu
-    - good by
-    - cee you later
-    - good night
-    - bye
-    - goodbye
-    - have a nice day
-    - see you around
-    - bye bye
-    - see you later
+    - arrivederci
+    - a presto
+    - ci vediamo
+    - addio
+    - ci sentiamo
+    - buona serata
+    - buonanotte
+    - alla prossima
 
 - intent: affirm
   examples: |
-    - yes
-    - y
-    - indeed
-    - of course
-    - that sounds good
-    - correct
+    - sì
+    - certo
+    - ovviamente
+    - esatto
+    - confermo
+    - sicuramente
+    - assolutamente
+    - decisamente
+    - va bene
 
 - intent: deny
   examples: |
     - no
-    - n
-    - never
-    - I don't think so
-    - don't like that
-    - no way
-    - not really
+    - assolutamente no
+    - niente affatto
+    - non credo
+    - non mi piace
+    - non voglio
+    - non sono d'accordo
+    - non sono sicuro
 
 - intent: mood_great
   examples: |
-    - perfect
-    - great
-    - amazing
-    - feeling like a king
-    - wonderful
-    - I am feeling very good
-    - I am great
-    - I am amazing
-    - I am going to save the world
-    - super stoked
-    - extremely good
-    - so so perfect
-    - so good
-    - so perfect
+    - perfetto
+    - fantastico
+    - meraviglioso
+    - mi sento benissimo
+    - sono felice
+    - sono contento
+    - tutto bene
+    - tutto ok
+    - tutto a posto
 
 - intent: mood_unhappy
   examples: |
-    - my day was horrible
-    - I am sad
-    - I don't feel very well
-    - I am disappointed
-    - super sad
-    - I'm so sad
-    - sad
-    - very sad
-    - unhappy
-    - not good
-    - not very good
-    - extremly sad
-    - so saad
-    - so sad
+    - la mia giornata è stata terribile
+    - sono triste
+    - non mi sento bene
+    - sono deluso
+    - sono molto triste
+    - non va bene
+    - non molto bene
+    - non sto bene
+    - non sono contento
 
 - intent: bot_challenge
   examples: |
-    - are you a bot?
-    - are you a human?
-    - am I talking to a bot?
-    - am I talking to a human?
+    - sei un bot?
+    - sei un umano?
+    - sto parlando con un bot?
+    - sto parlando con un umano?
+    - sei un robot?
+    - sei una persona?
