--- a/domain.yml
+++ b/domain.yml
@@ -11,23 +11,23 @@ intents:
 
 responses:
   utter_greet:
-  - text: "Hey! How are you?"
+  - text: "Ciao! Come stai?"
 
   utter_cheer_up:
-  - text: "Here is something to cheer you up:"
+  - text: "Ecco qualcosa per tirarti su:"
     image: "https://i.imgur.com/nGF1K8f.jpg"
 
   utter_did_that_help:
-  - text: "Did that help you?"
+  - text: "Ti ha aiutato?"
 
   utter_happy:
-  - text: "Great, carry on!"
+  - text: "Fantastico, continua così!"
 
   utter_goodbye:
-  - text: "Bye"
+  - text: "Arrivederci"
 
   utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+  - text: "Sono un bot, creato con Rasa."
 
 session_config:
   session_expiration_time: 60
