--- a/data/stories.yml
+++ b/data/stories.yml
@@ -60,3 +60,23 @@ stories:
     - action: utter_confirm_booking
     - intent: confirm_booking
     - action: utter_booking_confirmed
+
+- story: provide app detail
+  steps:
+    - intent: app_detail
+    - action: utter_app_detail
+
+- story: provide history app detail
+  steps:
+    - intent: history_app_detail
+    - action: utter_history_app_detail
+
+- story: provide operator app detail
+  steps:
+    - intent: operator_app_detail
+    - action: utter_operator_app_detail
+
+- story: provide security app detail
+  steps:
+    - intent: security_app_detail
+    - action: utter_security_app_detail
