--- a/domain.yml
+++ b/domain.yml
@@ -19,7 +19,6 @@ intents:
   - new_booking
   - service_choice
   - provide_location
-  - provide_preference_sex
   - provide_preference_car
   - provide_preference_medical_skills
   #- provide_preference_language
@@ -30,7 +29,6 @@ intents:
 entities:
   - service
   - location
-  - sex
   - car
   - med
   #- language
@@ -50,8 +48,6 @@ responses:
   - text: "Cosa vuoi fare ora? Posso aiutarti fornendo informazioni generali sulla piattaforma, sui tipi di servizi, su come effettuare una nuova prenotazione o consultare lo storico dei servizi richiesti."
   utter_new_booking: 
   - text: "Quale servizio vuoi prenotare?"
-  utter_ask_sex_preference:
-  - text: "Hai una preferenza sul sesso dell'operatore? (m/f)"
   utter_ask_car_preference:
   - text: "Preferisci un operatore automunito? (si/no)"
   utter_ask_medical_skills_preference:
@@ -65,7 +61,7 @@ responses:
   utter_booking_confirmed:
   - text: "Prenotazione confermata! Grazie per aver scelto ElderCare."
   utter_app_detail:
-  - text: "EldenCare è un'app nata per assistere gli anziani che rimangono da soli. Per evitare ciò è possibile effettuare una prenotazione di vari servizi di assistenza che verrà poi accettata da un nostro volontario. Questi ragazzi svolgono tale compito senza alcuna remunerazione economica mettendo il benessere comune al primo posto."
+  - text: "ElderCare è un'app nata per assistere gli anziani che rimangono da soli. Per evitare ciò è possibile effettuare una prenotazione di vari servizi di assistenza che verrà poi accettata da un nostro volontario. Questi ragazzi svolgono tale compito senza alcuna remunerazione economica mettendo il benessere comune al primo posto."
   utter_history_app_detail:
   - text: "Sono stata sviluppata da un team di studenti del corso di Ingegneria informatica dell'università politecnica delle Marche. Il progetto è stato realizzato nell'ambito del corcorso HACK-AI-TON 2024."
   utter_operator_app_detail:
@@ -84,11 +80,6 @@ slots:
     mappings:
       - type: from_entity
         entity: location
-  sex:
-    type: text
-    mappings:
-      - type: from_entity
-        entity: sex
   car:
     type: text
     mappings:
